Make the error message clearer when failing to connect